# AdaptiveResonanceLib

./: .pre-commit-config.yaml  CITATION.cff  CITATIONS.txt  CONTRIBUTING.md  LICENSE  README.md  __init__.py  alpha_art_tests.py  build_extension.py  hull_art_tests.py  paper.md  plot_hull_art_results.py  pyproject.toml  readthedocs.yaml  readthedocs.yml  references.bib  requirements.txt  setup.py
.github/workflows/: citation-update.yml  pre_commit_checks.yml  pypi-publish.yml  pytest.yml  test-pypi-publish.yml
artlib/: __init__.py
artlib/biclustering/: BARTMAP.py  __init__.py
artlib/common/: BaseART.py  BaseARTMAP.py  VAT.py  __init__.py  utils.py  visualization.py
artlib/cpp_optimized/: BinaryFuzzyARTMAP.cpp  BinaryFuzzyARTMAP.py  FuzzyARTMAP.py  GaussianARTMAP.py  HypersphereARTMAP.py  __init__.py  cppBinaryFuzzyARTMAP.cpp  cppGaussianARTMAP.cpp
artlib/cvi/: CVIART.py  CVIFuzzyArt.py  __init__.py  iCVIFuzzyArt.py
artlib/elementary/: ART1.py  ART2.py  BayesianART.py  BinaryFuzzyART.py  DistributedART.py  DualVigilanceART.py  EllipsoidART.py  FuzzyART.py  GaussianART.py  GramART.py  HypersphereART.py  QuadraticNeuronART.py  SeqART.py  __init__.py  iCVIART.py
artlib/experimental/: AlphaART.py  AlphaShape.py  ConvexHullART.py  HullART.py  SeqART.py  SphericalAlphaART.py  __init__.py  alphashape.py  iAlphaShape.py  merging.py
artlib/fusion/: FusionART.py  __init__.py
artlib/hierarchical/: DeepARTMAP.py  SMART.py  __init__.py
artlib/optimized/: BinaryFuzzyARTMAP.py  BinaryFuzzyARTMAPFactory.py  FuzzyARTMAP.py  FuzzyARTMAPFactory.py  GaussianARTMAP.py  GaussianARTMAPFactory.py  HypersphereARTMAP.py  HypersphereARTMAPFactory.py  __init__.py
artlib/reinforcement/: FALCON.py  TDFALCON.py  __init__.py
artlib/supervised/: ARTMAP.py  SimpleARTMAP.py  __init__.py
artlib/topological/: DualVigilanceART.py  TopoART.py  __init__.py
artlib/torch_optimized/: torchFuzzyARTMAP.py
biclustering/: BARTMAP.py
common/: BaseART.py  BaseARTMAP.py  utils.py
docs/: system-diagram.mmd
docs/diagrams/: basic-art-diagram.mmd  simple-artmap-diagram.mmd  standard-artmap-diagram.mmd  (+3 more)
elementary/: ART1.py  ART2.py  BaseART.py  BayesianART.py  DualVigilanceART.py  EllipsoidART.py  FuzzyART.py  GaussianART.py  HypersphereART.py  QuadraticNeuronART.py
examples/: comparison_of_methods.py  demo_BinaryFuzzyARTMAP.py  demo_VAT.py  demo_art1.py  demo_art2.py  demo_artmap.py  demo_bartmap.py  demo_bayesian_art.py  demo_convex_hull_art.py  demo_cpp_FuzzzyARTMAP.py  demo_cvi_art.py  demo_dual_vigilance_art.py  demo_ellipsoid_art.py  demo_fusion_art.py  demo_fuzzy_art.py  demo_gaussian_art.py  demo_grid_search_cv.py  demo_grid_search_cv_elementary.py  demo_hypersphere_art.py  demo_icvi_art.py  demo_make_gif.py  demo_quadratic_neuron_art.py  demo_regression.py  demo_reinforcement_learning.py  demo_seq_art.py  demo_smart.py  demo_topo_art.py  optimization_of_methods.py  test_VAT.py  test_art1.py  test_art2.py  test_artmap.py  test_bartmap.py  test_bayesian_art.py  test_convex_hull_art.py  test_cvi_art.py  test_dual_vigilance_art.py  test_ellipsoid_art.py  test_fusion_art.py  test_fuzzy_art.py  (+13 more)
fusion/: FusionART.py
hierarchical/: DeepARTMAP.py  SMART.py
scripts/: comparison_of_methods.py  generate_model_results_snapshot.py  generate_references.py  optimization_of_methods.py  render-all-diagrams.sh  render-diagram.sh
supervised/: ARTMAP.py  SimpleARTMAP.py
templates/: ART_template.py
topological/: TopoART.py
unit_tests/: cluster_results_snapshot.pkl  test_ART1.py  test_ART2.py  test_ARTMAP.py  test_BARTMAP.py  test_BayesianART.py  test_BinaryFuzzyARTMAP.py  test_CVIART.py  test_DeepARTMAP.py  test_DualVigilanceART.py  test_EllipsoidART.py  test_FALCON.py  test_FusionART.py  test_FuzzyART.py  test_FuzzyARTMAP.py  test_FuzzyARTMAP_factories.py  test_GaussianART.py  test_GaussianARTMAP.py  test_HypersphereART.py  test_HypersphereARTMAP.py  test_QuadraticNeuronART.py  test_SMART.py  test_SimpleARTMAP.py  test_TD_FALCON.py  test_TopoART.py  test_clustering_consistency.py  test_iCVI_FuzzyART.py
(+45 files in other folders)
